[package]
name = "webm2mp4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = 'https://github.com/telegram-rs/telegram-bot' }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
hyper = "0.14"
hyper-tls = "0.5"
dotenv = "*"
json = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"